# TenantDrive

./: README.md  config.py  database.db  dockerfile  main.py  pyproject.toml  requirements.txt
templates/: admin.html  exlink_error.html  exlink_view.html  index.html
utils/: __init__.py  database.py  login.py
