[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.7",
    "flask==2.3.3",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "werkzeug==2.3.7",
]
